--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "contentful": "^7.14.8",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.12",
@@ -32,7 +33,9 @@
     "react-dom": "^16.13.1",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^4.3.1",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scroll": "^1.7.16",
     "react-tilt": "^0.1.4"
   },
