--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^14.1.1",
     "bootstrap": "^4.5.0",
     "contentful": "^7.14.8",
     "gatsby": "^2.23.7",
@@ -25,6 +26,8 @@
     "gatsby-plugin-sharp": "^2.6.12",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
+    "gsap": "^3.5.1",
+    "html-react-parser": "^0.14.0",
     "nanoid": "^3.1.10",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
