--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.7.16",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "splitting": "^1.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
