--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@contentful/rich-text-html-renderer": "^14.1.1",
     "bootstrap": "^4.5.0",
     "contentful": "^7.14.8",
-    "gatsby": "^2.23.7",
+    "gatsby": "^2.24.87",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-create-client-paths": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.12",
     "gatsby-plugin-offline": "^3.2.11",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-source-contentful": "^3.0.4",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
     "gsap": "^3.5.1",
