--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.1",
+    "@reach/router": "^1.3.4",
     "bootstrap": "^4.5.0",
     "contentful": "^7.14.8",
     "gatsby": "^2.24.87",
