--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Erick Gavin Portfolio",
+  "name": "gav_folio",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -19,7 +19,7 @@
     "@reach/router": "^1.3.4",
     "bootstrap": "^4.5.0",
     "contentful": "^7.14.8",
-    "gatsby": "^2.24.87",
+    "gatsby": "^3.8.0",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-create-client-paths": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.12",
@@ -30,7 +30,7 @@
     "gatsby-source-contentful": "^3.0.4",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
-    "gsap": "^3.5.1",
+    "gsap": "^3.7.0",
     "html-react-parser": "^0.14.0",
     "nanoid": "^3.1.10",
     "node-sass": "^4.14.1",
@@ -59,7 +59,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "prettier": "2.3.2"
   },
   "repository": {
     "type": "git",
